[package]
name = "vizia_scope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
femtovg = { git = "https://github.com/rhelmot/femtovg", branch = "cosmic", default-features = false, features = ["image-loading"] }